work3/gke-stress-test/HTTPS/server/my-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: LoadBalancer
  selector:
    app: my-app
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 30000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-container
        image: us.gcr.io/striped-proxy-187410/http-server:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 400m
          requests:
            cpu: 300m
